Update page header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HLS / IPTV Stream Explorer</title>
+    <title>View IPTV</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- hls.js -->
@@ -14,8 +14,9 @@
 <body class="min-h-screen bg-gray-100 text-gray-900">
     <main class="container mx-auto p-6 max-w-6xl">
         <!-- Header -->
-        <header>
-            <h1 class="text-3xl font-bold mb-2">Stream Explorer & Player</h1>
+        <header class="mb-4">
+            <h1 class="text-3xl font-bold">View IPTV</h1>
+            <h2 class="text-lg text-gray-500 mb-2">view-iptv.stream</h2>
             <p class="text-gray-600">
                 Paste an <code>.m3u</code> or <code>.m3u8</code> playlist/manifest URL. We’ll list the
                 streams and play them on click (HLS supported via <code>hls.js</code>).
