--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </div>
     </main>
 
+    <footer class="bg-gray-200 text-center py-4 mt-8">
+        <p class="font-semibold">View-IPTV.stream</p>
+        <p>Copyright &copy; 2025 Sideways Thought LLC.</p>
+        <p><a href="#" class="text-blue-600 hover:underline">Contact Us</a></p>
+    </footer>
+
     <script src="main.js"></script>
 </body>
 
