--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body class="min-h-screen bg-gray-100 text-gray-900">
+    <nav class="sr-only focus-within:not-sr-only absolute left-2 top-2 bg-white p-2 rounded shadow space-y-2">
+        <a href="#playlistForm" class="block">Skip to playlist</a>
+        <a href="#videoPlayer" class="block">Skip to video player</a>
+    </nav>
     <main class="container mx-auto p-6 max-w-6xl">
         <!-- Header -->
         <header>
@@ -23,7 +27,7 @@
         </header>
 
         <!-- Controls -->
-        <div class="flex flex-col sm:flex-row gap-2 mt-4">
+        <div id="playlistForm" tabindex="-1" class="flex flex-col sm:flex-row gap-2 mt-4">
             <input id="manifestUrl" type="url" placeholder="https://example.com/playlist.m3u8"
                 class="flex-1 px-3 py-2 border rounded shadow-sm focus:outline-none focus:ring" />
             <button id="loadBtn" class="px-4 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700">
