Update page titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>View IPTV</title>
+    <title>View IPTV | VIew-IPTV.stream</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- hls.js -->
@@ -72,6 +72,7 @@
         <p class="font-semibold">View-IPTV.stream</p>
         <p>Copyright &copy; 2025 Sideways Thought LLC.</p>
         <p><a href="#" class="text-blue-600 hover:underline">Contact Us</a></p>
+        <p><a href="privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a></p>
     </footer>
 
     <script src="main.js"></script>
