Remove privacy link from header

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <a href="#playlistForm" class="block">Skip to playlist</a>
         <a href="#videoPlayer" class="block">Skip to video player</a>
     </nav>
+    <!-- Site Navigation -->
+    <header class="bg-gray-200">
+        <div class="container mx-auto max-w-6xl flex justify-between items-center p-4">
+            <div class="font-semibold">View-IPTV.stream</div>
+            <nav class="space-x-4">
+                <a href="index.html" class="text-blue-600 hover:underline">Home</a>
+            </nav>
+        </div>
+    </header>
     <main class="container mx-auto p-6 max-w-6xl">
         <!-- Header -->
         <header class="mb-4">
