--- a/privacy.html
+++ b/privacy.html
@@ -10,6 +10,15 @@
     <nav class="sr-only focus-within:not-sr-only absolute left-2 top-2 bg-white p-2 rounded shadow space-y-2">
         <a href="#policy" class="block">Skip to content</a>
     </nav>
+    <!-- Site Navigation -->
+    <header class="bg-gray-200">
+        <div class="container mx-auto max-w-6xl flex justify-between items-center p-4">
+            <div class="font-semibold">View-IPTV.stream</div>
+            <nav class="space-x-4">
+                <a href="index.html" class="text-blue-600 hover:underline">Home</a>
+            </nav>
+        </div>
+    </header>
     <main id="policy" tabindex="-1" class="container mx-auto p-6 max-w-5xl space-y-6">
         <header class="space-y-2">
             <h1 class="text-3xl font-bold">Privacy Policy</h1>
@@ -110,6 +119,7 @@
         <p class="font-semibold">View-IPTV.stream</p>
         <p>Copyright &copy; 2025 Sideways Thought LLC.</p>
         <p><a href="index.html" class="text-blue-600 hover:underline">Return to home</a></p>
+        <p><a href="privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
