--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="container mx-auto p-6 max-w-6xl">
         <!-- Header -->
         <header class="mb-4">
-            <h1 class="text-3xl font-bold">View IPTV</h1>
+            <h1 class="text-3xl font-bold">IPTV Stream Viewer</h1>
             <h2 class="text-lg text-gray-500 mb-2">view-iptv.stream</h2>
             <p class="text-gray-600">
                 Paste an <code>.m3u</code> or <code>.m3u8</code> playlist/manifest URL. We’ll list the
